# AI-Business-SPB-Hackathon-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml  ruff.toml  solution.py
.github/workflows/: deploy.yml
ML/: alternative.py  run_eda.py  train.py
ML/MORSIN/artifacts/: classical.joblib
ML/MORSIN/experiments/mahalanobis_cnn/: __init__.py  train.py
ML/MORSIN/neuroice/: __init__.py  deep.py  features.py  inference.py  paths.py
ML/MORSIN/scripts/: download_data.py  export_submission_artifacts.py  submit.py  train_model.py
ML/MORSIN/tests/: test_solution_smoke.py
MORSIN/: solution.py
MORSIN/experiments/artifacts/: mahalanobis_resnet18_meta.json
MORSIN/experiments/mahalanobis_cnn/: encoder.py  groups.py
MORSIN/scripts/: submit.py
alembic/: env.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  audio.py
app/core/: config.py  metrics.py
app/db/: base.py  unit_of_work.py
app/models/: audio_model.py
app/repositories/: base_repo.py
app/schemas/: audio.py
app/services/: audio_classifier.py  audio_service.py  classifier.py
docs/: .env.example  README.md  task.md
notebooks/: explore.ipynb
projects/neuroice/: .gitignore  README.md  pyproject.toml
projects/neuroice/artifacts/: score_calibration.joblib
projects/neuroice/experiments/: __init__.py
projects/neuroice/experiments/mahalanobis_cnn/: augment.py  mahalanobis.py  spec.py
projects/neuroice/scripts/: submit.py
scripts/: submit.py
