[project]
name = "neuroice-starter"
version = "0.1.0"
description = "NeuroICE case starter — AI Business SPB Hackathon 2026"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "soundfile>=0.12",
    "scikit-learn>=1.3",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
